update shopping responsive

--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,9 @@ body {
 }
 @media screen and (max-width: 1024px) {
     .inner {
+        padding: 0 20px 20px 20px;
         max-width: 760px;
+        border-bottom: 8px solid #f0f4f4;
     }
 }
 
@@ -99,8 +101,19 @@ body {
 .sw-prev::before {
     transform: scaleX(-100%);
 }
+@media screen and (max-width: 1024px) {
+    .sw-bt {
+        display: none;
+    }
+}
 
 /* section 내용 구조 */
+
+.wrap > section {
+    padding-top: 30px;
+    padding-bottom: 90px;
+}
+
 .section-top {
     text-align: center;
 }
@@ -167,6 +180,9 @@ body {
 }
 
 @media screen and (max-width: 1280px) {
+    .wrap > section {
+    }
+
     .section-top {
     }
     .section-top > h2 {
@@ -175,6 +191,10 @@ body {
     }
 }
 @media screen and (max-width: 1024px) {
+    .wrap > section {
+        padding-top: 30px;
+        padding-bottom: 40px;
+    }
     .section-top {
     }
     .section-top > h2 {
@@ -186,8 +206,28 @@ body {
         font-size: 15px;
         line-height: 18px;
     }
+
+    .bt-link-shop {
+        display: block;
+        font-size: 15px;
+        line-height: 48px;
+        border-radius: 3px;
+    }
+    .section-top .btns {
+        margin: 15px 0;
+        white-space: nowrap;
+        overflow: hidden;
+    }
+    .section-top .btns a {
+        line-height: 34px;
+        padding: 0 14px;
+        margin-right: 5px;
+    }
 }
 @media screen and (max-width: 760px) {
+    .wrap > section {
+        padding-bottom: 30px;
+    }
     .section-top {
     }
     .section-top > h2 {
@@ -217,6 +257,83 @@ body {
     box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.16);
     font-size: 0;
     margin-top: 10px;
+}
+
+/* 퀵메뉴 */
+.quick-menu {
+    display: none;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background: #fff;
+    z-index: 99;
+}
+.quick-menu .inner {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-top: 1px solid rgba(0, 0, 0, 0.2);
+}
+.quick-menu a {
+}
+@media screen and (max-width: 1024px) {
+    .quick-menu {
+        display: block;
+    }
+}
+/* 플라잉 마이페이지 */
+.fix-mypage {
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    z-index: 9999999;
+}
+
+.fix-mypage-main {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
+.fix-mypage-main .inner {
+    border-radius: 18px 18px 0 0;
+    background: #fff;
+    overflow: hidden;
+    padding: 30px 0;
+    text-align: center;
+}
+.fix-mypage-title {
+    font-size: 20px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+.fix-mypage-list {
+    display: inline-block;
+}
+.fix-mypage-list li {
+    float: left;
+    margin-right: 40px;
+}
+.fix-mypage-list li:last-child {
+    margin-right: 0;
+}
+
+.fix-mypage-list li a {
+    font-size: 14px;
+    color: #666;
+}
+.fix-mypage-list li a img {
+    width: 48px;
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 8px;
+}
+@media screen and (max-width: 1280px) {
 }
 
 /* 기본레이아웃 */
@@ -443,7 +560,6 @@ body {
 
 @media screen and (max-width: 1024px) {
     .header {
-        border-bottom: 8px solid #f0f4f4;
     }
     .header .inner {
         padding-top: 15px;
@@ -505,8 +621,6 @@ body {
 
 /* 추천이벤트 */
 .promotion {
-    padding-top: 30px;
-    padding-bottom: 90px;
 }
 
 .promotion .inner {
@@ -549,7 +663,6 @@ body {
     }
     .promotion .inner {
         height: 300px;
-        border-bottom: 8px solid #f0f4f4;
     }
     .promotion .section-top {
         display: block;
@@ -562,18 +675,20 @@ body {
     .sw-promotion-control {
         display: block;
     }
-    .swiper-pagination-bullet {
+    /* swiper.js 에서 자동으로 css 생성 */
+    .sw-promotion-pg .swiper-pagination-bullet {
         width: 8px;
         height: 8px;
         border-radius: 50%;
         opacity: 0.2;
-        background: black;
+        background-color: #000;
     }
-    .swiper-pagination-bullet-active {
+    .sw-promotion-pg .swiper-pagination-bullet-active {
         opacity: 1;
-        background: black;
+        background-color: #000;
     }
 }
+
 @media screen and (max-width: 760px) {
     .promotion .inner {
         height: 290px;
@@ -584,32 +699,31 @@ body {
         width: 50%;
         min-width: 350px;
     }
+
     .sw-promotion-control {
         margin-top: -20px;
         z-index: 999;
     }
-    .swiper-pagination-bullet {
+    .sw-promotion-pg .swiper-pagination-bullet {
         width: 6px;
         height: 6px;
         border-radius: 50%;
         opacity: 0.3;
-        background: 조ㅑㅅㄷ;
+        background-color: #fff;
     }
-    .swiper-pagination-bullet-active {
+    .sw-promotion-pg .swiper-pagination-bullet-active {
         opacity: 1;
-        background: white;
         width: 8px;
         height: 8px;
+        background-color: #fff;
     }
 }
 
 /* 쇼핑추천 */
 .shopping {
-    padding-top: 30px;
-    padding-bottom: 90px;
 }
 .shopping .section-slide {
-    height: 405px;
+    /* height: 405px; */
 }
 
 .sw-shopping {
@@ -649,6 +763,7 @@ body {
     line-height: 24px;
     color: #111;
     font-weight: 700;
+    white-space: nowrap;
 }
 .good-info-list li b span {
     color: #ef3e43;
@@ -675,6 +790,39 @@ body {
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
 }
+
+@media screen and (max-width: 1280px) {
+}
+@media screen and (max-width: 1024px) {
+    .good-info {
+        padding: 10px;
+    }
+}
+@media screen and (max-width: 800px) {
+    .good-info-list li b {
+        font-size: 15px;
+        line-height: 18px;
+        white-space: nowrap;
+    }
+    .good-info {
+        padding: 10px;
+    }
+}
+@media screen and (max-width: 760px) {
+    .good-info-list li b {
+        font-size: 12px;
+        line-height: 18px;
+    }
+    .good-info {
+        padding: 5px;
+    }
+    .good-info-list li p {
+        font-size: 13px;
+        line-height: 16px;
+        height: 32px;
+    }
+}
+
 /* 투어특가 */
 .tour {
     padding-top: 30px;
