--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,9 @@ body {
 }
 @media screen and (max-width: 1024px) {
     .inner {
-        padding: 0 20px 20px 20px;
+        padding: 0 20px;
+        padding-bottom: 20px;
+
         max-width: 760px;
         border-bottom: 8px solid #f0f4f4;
     }
@@ -106,7 +108,6 @@ body {
         display: none;
     }
 }
-
 /* section 내용 구조 */
 
 .wrap > section {
@@ -830,7 +831,7 @@ body {
 }
 
 .tour .section-slide {
-    height: 355px;
+    /* height: 355px; */
 }
 .sw-tour {
     height: 100%;
@@ -846,7 +847,14 @@ body {
 .tour-img {
     position: relative;
     width: 100%;
-    height: 245px;
+
+    /* 1280px 일때 높이가 245 px 이다. */
+    /* 1280px 이 100vw 라면  */
+    /* 245px 은 몇 vw 일까? */
+    /*  245 / 1280 * 100  */
+    max-height: 245px;
+    height: 19.14vw;
+
     overflow: hidden;
 }
 .tour-img img {
@@ -855,7 +863,7 @@ body {
     top: 50%;
     left: 50%;
     /* 좌표, 영역말고 내용 즉, 보이는 부분만 이동 */
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(1.3);
 
     width: 100%;
 }
@@ -906,13 +914,41 @@ body {
     font-size: 20px;
 }
 
+@media screen and (max-width: 1024px) {
+    .tour-img {
+        /* height: 138px; */
+    }
+    .tour-info {
+        padding: 10px;
+    }
+    .tour-cate {
+        top: -22px;
+        line-height: 22px;
+        padding: 0 7px;
+        border-radius: 4px;
+    }
+    .tour-title {
+        font-size: 13px;
+        line-height: 15px;
+    }
+    .tour-price {
+        font-size: 15px;
+    }
+    .tour-price b {
+        font-size: 15px;
+        line-height: 18px;
+    }
+}
+@media screen and (max-width: 760px) {
+}
+
 /* 티켓랭킹 */
 .ticket {
     padding-top: 30px;
     padding-bottom: 90px;
 }
 .ticket .section-slide {
-    height: 540px;
+    /* height: 540px; */
 }
 .ticket .section-slide .sw-bt {
     top: 35%;
@@ -931,7 +967,8 @@ body {
 .ticket-img {
     position: relative;
     width: 100%;
-    height: 400px;
+    max-height: 400px;
+    height: 31.25vw;
     overflow: hidden;
 
     border-radius: 10px;
@@ -941,7 +978,7 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(1.1);
 
     width: 100%;
 }
@@ -1014,6 +1051,52 @@ body {
     color: #ef3e43;
     border: 1px solid rgba(239, 62, 67, 0.3);
     border-radius: 3px;
+}
+@media screen and (max-width: 1280px) {
+    .ticket-img img {
+        transform: translate(-50%, -50%) scale(1);
+    }
+}
+@media screen and (max-width: 1024px) {
+    .ticket .section-slide {
+        width: 120%;
+        overflow: hidden;
+    }
+    .ticket-rank {
+        left: 12px;
+        font-size: 38px;
+        line-height: 45px;
+    }
+    .ticket-img img {
+        transform: translate(-50%, -50%) scale(1.4);
+    }
+}
+@media screen and (max-width: 760px) {
+    .ticket-info {
+        padding: 10px 5px;
+    }
+    .ticket-title {
+        font-size: 15px;
+        line-height: 18px;
+        height: 36px;
+        font-weight: 400;
+    }
+    .ticket-title b {
+    }
+    .ticket-hall {
+        font-size: 13px;
+        line-height: 16px;
+        margin: 5px 0;
+    }
+    .ticket-date {
+        font-size: 12px;
+        line-height: 14px;
+    }
+    .ticket-sale {
+        font-size: 10px;
+        line-height: 18px;
+        padding: 0 5px;
+    }
 }
 
 /* 인터파크 라이브 */
